Fixed display on mobile phones - 2

--- a/src/components/OrderForm/components/Additionally/Additionally.scss
+++ b/src/components/OrderForm/components/Additionally/Additionally.scss
@@ -11,6 +11,7 @@
   }
   @media screen and (max-width: $tablet) {
     padding: $small $small;
+    height: auto;
   }
 
   &__title {
